--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">WoSafe</string>
+    <string name="open_nav">Open Navigation Bar</string>
+    <string name="close_nav">Close Navigation Bar</string>
 </resources>
